deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docplanner
  labels:
    app: docplanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docplanner
  template:
    metadata:
      labels:
        app: docplanner
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
