deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docplanner-svc
spec:
  selector:
    app: docplanner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
